--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <div id="message">
         <h1>Congratulations!</h1>
         <p>You are done.</p>
+	<p>player :)</p>
+	<img src="avatars.jpg" alt="player1">
         <p id="moves"></p>
         <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Cool!" />
       </div>
@@ -39,7 +41,7 @@
       </div>
     </div>
 
-    <p id="instructions">Use arrow keys to move the key to the house!</p>
+    <p id="instructions">Use arrow keys to move the avatar to the flag!</p>
 
   </div>
 
