--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                   <option value="38">Extreme</option>                                      
               </select>
       </div>
+      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="About" />
+    </div>
+
+     </div>
       <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
     </div>
 
