--- a/index.html
+++ b/index.html
@@ -13,14 +13,38 @@
 
     <div id="Message-Container">
       <div id="message">
-        <h1>Congratulations!</h1>
+          <h1>Congratulations!</h1>
         <p>You are done.</p>
-	<p>player :)</p>
-	<img src="avatars.jpg" alt="player1">
         <p id="moves"></p>
-        <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Cool!" />
+        <input id="okBtn" type="button" onclick="toggleVisibility('Message-Container')" value="Cool!" />
       </div>
     </div>
 
+    <br>
+    <div id="menu">
+      <div class="custom-select">
+        <select id="diffSelect">
+          <option value="10">Easy</option>
+          <option value="15">Medium</option>
+          <option value="25">Hard</option>
+          <option value="38">Extreme</option>
+        </select>
+      </div>
+      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
+    </div>
+
+    <div id="view">
+      <div id="mazeContainer">
+        <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
+      </div>
+    </div>
+
+    <p id="instructions">Use arrow keys to move the key to the house!</p>
+
+  </div>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
+
