--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>You are done.</p>
         <p>Avatars</p>
         <img src="avatars.jpg" alt="Player">
+        <img src="flag.jpg" alt="Winner">
         <p id="moves"></p>
         <input id="okBtn" type="button" onclick="toggleVisibility('Message-Container')" value="Cool!" />
       </div>
