--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
       </div>
       <input id="startMazeBtn" type="button" onclick="makeMaze()" value="About" />
     </div>
-
+    
+      </div>
+      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start Game" />
+    </div>
+    
     <div id="view">
       <div id="mazeContainer">
         <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
