--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
           <option value="38">Extreme</option>
         </select>
       </div>
-      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="About" />
+      <input id="AboutBtn" type="button" onclick="makeMaze()" value="About" />
     </div>
     
-    <!-- Remove duplicate button and correct button value -->
-    <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start Game" />
-    
+    </div>
+   <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start Game" />
+   </div>
+
     <div id="view">
       <div id="mazeContainer">
         <canvas id="mazeCanvas" class="border" height="1100" width="1100"></canvas>
