--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p>You are done.</p>
         <p>Avatars</p>
         <!-- Correct the paths to the image files -->
-        <img src="avatars.jpg" alt="Player">
-        <img src="flag.jpg" alt="Winner">
+        <img src="https://github.com/Lulekoh/Maze-licious/blob/master/flag.jpg" alt="Player">
+        <img src="https://github.com/Lulekoh/Maze-licious/blob/master/avatars.jpg" alt="Winner">
         <p id="moves"></p>
         <input id="okBtn" type="button" onclick="toggleVisibility('Message-Container')" value="Cool!" />
       </div>
