--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maze</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="maze.css">
 </head>
 <body>
 
@@ -16,6 +16,9 @@
         <h1>Congratulations!</h1>
         <p>You are done.</p>
         <p id="moves"></p>
+	<p>Avatars</p>
+	<img src="avatars.jpg" alt="player">
+	<img src="flag.jpg" alt="won">
         <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Cool!" />
       </div>
     </div>
