--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   <option value="38">Extreme</option>                                      
               </select>
       </div>
+      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="About" />
       <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
     </div>
 
@@ -42,7 +43,7 @@
       </div>
     </div>
 
-    <p id="instructions">Use arrow keys to move the key to the house!</p>
+    <p id="instructions">Use arrow keys to move the avatar to the flag!</p>
 
   </div>
 
