--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="Message-Container">
       <div id="message">
         <h1>Congratulations!</h1>
-        <p>You are done.</p>
+        <p>You win!!!.</p>
         <p id="moves"></p>
-        <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Cool!" />
+        <input id="okBtn" type="button" onclick="toggleVisablity('Message-Container')" value="Done!" />
       </div>
     </div>
 
